[fixed]: too long shadow at bottom

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -258,7 +258,7 @@
     border: 1px solid $border-color;
     border-radius: $border-radius;
     background: #fff;
-    box-shadow: 0 8px 16px 1px rgba(#000, 0.2);
+    box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);
 
     a {
       margin: 0;
